# RPi-LED-Strings

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  README.md  RPi-LED-Strings-TODO.taskpaper  autogen.sh  buildit.sh  configure.ac  copyright  matrix.prj  testFile.c
LEDfifoLKM/: LEDfifoConfigureIOCtl.h  LEDfifoLKM.c  LEDfifoLKM.prj  Makefile  README.md  chkled  ioctlSampleApp.c  ledfifo_load  ledfifo_unload  testApp.c
images/source/: 8pxSquares.psd  8pxSquaresLines.psd  8pxSquaresLinesTry2.psd  8pxSquaresMarked.psd
prototypes/InterruptSolutions/: Makefile  timtest.c
prototypes/led_test_001/: AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.md  commandProcessor.c  config.h  config.h.in  config.status  configure.in  debug.c  debug.h  frameBuffer.c  frameBuffer.h  imageLoader.c  imageLoader.h  ledGPIO.c  ledGPIO.h  ledScreen.c  ledScreen.h  led_test_001.1  led_test_001.c  led_test_001.info  led_test_001.lsm  led_test_001.lsm.in  led_test_001.prj  led_test_001.spec  led_test_001.spec.in  led_test_001.texinfo  nSecDelayASM.c  nSecDelayASM.s  piSystem.c  piSystem.h  xmalloc.h
src/: Makefile.am  charSet.c  charSet.h  clockDisplay.c  clockDisplay.h  commandProcessor.c  commandProcessor.h  config.h  config.h.in  debug.c  debug.h  frameBuffer.c  frameBuffer.h  imageLoader.c  imageLoader.h  ledScreen.c  ledScreen.h  matrix.1  matrix.c  matrix.lsm.in  matrix.spec.in  matrix.texinfo  matrixDriver.c  matrixDriver.h  piSystem.c  piSystem.h  show  system.h  xmalloc.c
src/scripts/: shack-clock.lsc
